src/test/deca/context/valid/avecObjet/class_extends.deca
// Description :
//    Déclaration d'une classe avec héritage (extends).
//
// Resultats :
//    OK

class A {
}

class B extends A {
}

{
}
