src/test/deca/context/invalid/classes/class_extends_nonclass_type.deca
// Description :
// tentative d'héritage depuis un type non-class
//
// Resultats :
//    Erreur contextuelle
//    Ligne 8 : La super-classe int n'est pas une classe

class C extends int { // doit échouer
}
